<resources>
    <string name="app_name">FestiplAndroid</string>

    <string name="connexion_non_renseigne">Veuillez renseigner tous les champs</string>
    <string name="connexion_erreur_connexion">Identifiant ou mot de passe incorrect</string>

    <string name="connexion_placeholder_pseudo">Nom d\'utilisateur</string>
    <string name="connexion_placeholder_mdp">Mot de passe</string>

    <string name="connexion_button">Connexion</string>

    <!-- ATTENTION : remplacer ip ci-dessous par IPV4 locale (ipconfig dans cmd) -->
    <string name="lien_api">http://192.168.161.121:80/API/</string>

    <string name="menu_festivals_programmes">Festivals programmés</string>
    <string name="menu_festivals_favoris">Festivals favoris</string>

    <string name="festivals_placeholder_titre">Titre du festival</string>
    <string name="festivals_placeholder_dates">Du 00/00/0000\nau 00/00/0000</string>
    <string name="festivals_description_image">Image représentant le festival affiché</string>

    <string name="festival_ajoute_favoris">Festival n°%d ajouté aux favoris</string>
    <string name="festival_retire_favoris">Festival n°%d retiré des favoris</string>

    <string name="festivals_chargement_donnees">Chargement des festivals</string>

    <string name="details_titre_defaut">Titre du festival par défaut :</string>
    <string name="details_dates_defaut">Du XX/XX/XXXX\nau XX/XX/XXXX</string>
    <string name="details_description">Description :</string>
    <string name="details_description_defaut">Description par défaut du festival</string>
    <string name="details_liste_spectacles">Liste des spectacles programmés :</string>
    <string name="details_aucun_spectacle">Aucun spectacle n\'est programmé dans ce festival.</string>

    <string name="erreur_survenue">Une erreur est survenue</string>
</resources>