<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_page"
    android:orientation="vertical"
    tools:context=".DetailsFestival"
    android:stretchColumns="*">

    <TableRow
        android:gravity="center"
        android:layout_marginBottom="@dimen/details_marge_lignes">
        <TextView
            android:id="@+id/titre_festival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/details_titre_defaut"/>

        <TextView
            android:id="@+id/dates_festival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/details_dates_defaut"/>
    </TableRow>

    <TableRow
        android:gravity="center"
        android:layout_marginBottom="@dimen/details_marge_sous_image">

        <ImageView
            android:id="@+id/illustration"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="1dp"
            android:layout_span="2"
            android:scaleType="centerInside"
            android:contentDescription="@string/festivals_description_image"
            android:src="@drawable/default_illustration" />
    </TableRow>

    <TableRow
        android:layout_marginStart="@dimen/details_marge_cotes"
        android:layout_marginBottom="@dimen/details_marge_paragraphe_description">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/details_description"/>
    </TableRow>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/details_marge_cotes"
        android:layout_marginRight="@dimen/details_marge_cotes"
        android:layout_marginBottom="@dimen/details_marge_lignes"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/details_description_defaut" />

    <TableRow
        android:layout_marginStart="@dimen/details_marge_cotes"
        android:layout_marginBottom="@dimen/details_marge_paragraphe_liste">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/details_liste_spectacles"/>
    </TableRow>

    <ListView
        android:id="@+id/liste_spectacles"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hauteur_liste_spectacles"
        android:layout_marginLeft="@dimen/details_marge_cotes"
        android:layout_marginRight="@dimen/details_marge_cotes"
        android:layout_marginBottom="@dimen/details_marge_lignes" />

</TableLayout>